# streaming-form-data

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  Justfile  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  Taskfile.yml  annotation.html  build.py  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.dev.in  requirements.dev.txt  requirements.examples.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  main.yml  test.yml
data/: file.txt
docs/: Makefile  conf.py  index.md  index.rst
docs/_templates/: usefullinks.html
examples/: index.html  stream_request_body.py
examples/bottle/: requirements.txt  stream_request_body.py
examples/bottle/templates/: index.html
examples/fastapi/: app.py  requirements.txt
examples/flask/: upload-test.py
examples/tornado/: requirements.txt  stream_request_body.py  upload.html
scripts/: benchmark.py  benchmark_concurrent.py  server.py
src/streaming_form_data/: __init__.py  _parser.c  _parser.pyx  parser.py  targets.py  validators.py
streaming_form_data/: __init__.py  _parser.c  _parser.pxd  _parser.pyx  common.py  delegates.py  finder.c  finder.py  finder.pyx  parser.py  part.py  targets.py  validators.py
streaming_form_data/core/: finder.c
tests/: test_common.py  test_exceptions.py  test_finder.py  test_parser.py  test_parser_stress.py  test_targets.py  test_validators.py
utils/: benchmark.py  multipart_encoder.py  profile.py  speedtest.py  stress_test.py  test_parser_stress.py
