[project]
name = "streaming-form-data"
version = "1.17.0"
description = "Streaming parser for multipart/form-data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "smart-open>=7.0.5",
]
authors = [
    {name = "Siddhant Goel", email = "me@sgoel.dev"}
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["form-data", "forms", "http", "multipart", "web"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "streaming_form_data._parser", sources = ["src/streaming_form_data/_parser.c"]}
]

[tool.uv]
dev-dependencies = [
    "cython>=3.0.11",
    "mkdocs>=1.6.1",
    "moto>=5.0.16",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.6.9",
]
