[project]
name = "streaming-form-data"
version = "1.19.1"
description = "Streaming parser for multipart/form-data"
readme = "README.md"
authors = [
    { name = "Siddhant Goel", email = "me@sgoel.dev" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["cython", "form-data", "forms", "http", "multipart", "streaming", "web"]
dependencies = [
    "smart-open>=7.0.5",
]

[project.urls]
Homepage = "https://github.com/siddhantgoel/streaming-form-data"
Repository = "https://github.com/siddhantgoel/streaming-form-data"
Documentation = "https://streaming-form-data.readthedocs.io"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
ext-modules = [
    {name = "streaming_form_data._parser", sources = ["src/streaming_form_data/_parser.c"]}
]

[dependency-groups]
dev = [
    "cython>=3.0.11",
    "mkdocs>=1.6.1",
    "moto>=5.0.22",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.8.2",
]
